# Emdash2

./: .env.example  .eslintrc.json  .gitignore  AGENTS.md  CLAUDE.md  CONTRIBUTING.md  README.md  drizzle.config.ts  flake.nix  instructions.md  package.json  tailwind.config.js  vite.config.ts
.github/workflows/: code-consistency-check.yml  nix-build.yml  release.yml
docs/: README.md  ghostty-vt-wasm.md  package.json
docs/content/docs/: index.mdx
scripts/: macos-release.sh
src-tauri/: Cargo.toml  appConfig.json  tauri.conf.json
src-tauri/src/: browser.rs  container.rs  db.rs  debug.rs  fs.rs  git.rs  github.rs  host_preview.rs  jira.rs  linear.rs  main.rs  net.rs  plan_lock.rs  providers.rs  pty.rs  runtime.rs  settings.rs  storage.rs  system_env.rs  telemetry.rs  terminal_snapshots.rs  update.rs  worktree.rs
src/assets/wasm/: ghostty-vt.wasm
src/main/services/: ProjectPrep.ts  containerConfigService.ts  containerRunnerService.ts  hostPreviewService.ts
src/renderer/: App.tsx  index.css  index.html  main.tsx
src/renderer/components/: ActiveRuns.tsx  AllChangesDiffModal.tsx  AnimatedWordmark.tsx  AppKeyboardShortcuts.tsx  BaseBranchControls.tsx  BrowserPane.tsx  BrowserPreviewSettingsCard.tsx  ChangesDiffModal.tsx  ChatInterface.tsx  CliProvidersList.tsx  CloneFromUrlModal.tsx  CommandPalette.tsx  CommandPaletteWrapper.tsx  ContainerStatusBadge.tsx  Context7SettingsCard.tsx  Context7Tooltip.tsx  DatabaseRecoveryModal.tsx  DefaultProviderSettingsCard.tsx  (+41 more)
src/types/: desktop-extra.d.ts  terminalSnapshot.ts
tools/ghostty-vt-wasm/: build-wasm.sh
(+60 files in other folders)
