[package]
name = "emdash"
version = "0.3.43"
description = "Emdash desktop app"
authors = ["Emdash Contributors"]
edition = "2021"

[build-dependencies]
tauri-build = { version = "2.5.3", features = [] }

[dependencies]
tauri = { version = "2.6.0", features = ["unstable"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
urlencoding = "2.1"
uuid = { version = "1", features = ["v4"] }
rusqlite = { version = "0.30", features = ["bundled"] }
sha2 = "0.10"
hex = "0.4"
chrono = { version = "0.4", default-features = false, features = ["clock"] }
open = "5.3"
rfd = "0.15"
ureq = { version = "2.9", features = ["json"] }
portable-pty = "0.9"
base64 = "0.22"
keyring = "2"
rand = "0.8"
semver = "1"
sha1 = "0.10"
zip = "0.6.6"

[features]
custom-protocol = ["tauri/custom-protocol"]
